// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`A-UT-SNAPSHOT: Admin Frontend Tasks Snapshot Tests should match admin frontend tasks page snapshot (loading state) 1`] = `
<div
  class="bg-gray-900 text-white p-6"
>
  <div
    class="max-w-7xl mx-auto"
  >
    <div
      class="flex justify-between items-center mb-8"
    >
      <div>
        <h1
          class="text-3xl font-bold"
        >
          Frontend Tasks
        </h1>
        <p
          class="text-gray-400 mt-2"
        >
          Manage React and frontend coding challenges
        </p>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors"
        >
          <span>
            💻
          </span>
          Create Task
        </button>
      </div>
    </div>
    <div
      class="bg-gray-800 rounded-lg p-4 mb-6"
    >
      <div
        class="flex gap-4 items-center"
      >
        <div
          class="flex-1"
        >
          <div
            class="relative"
          >
            <span>
              🔍
            </span>
            <input
              class="w-full pl-10 pr-4 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-blue-500"
              placeholder="Search tasks..."
              type="text"
              value=""
            />
          </div>
        </div>
        <select
          class="px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            All Categories
          </option>
          <option
            value="React"
          >
            React
          </option>
          <option
            value="JavaScript"
          >
            JavaScript
          </option>
          <option
            value="TypeScript"
          >
            TypeScript
          </option>
          <option
            value="CSS"
          >
            CSS
          </option>
          <option
            value="HTML"
          >
            HTML
          </option>
          <option
            value="Vue.js"
          >
            Vue.js
          </option>
          <option
            value="Angular"
          >
            Angular
          </option>
          <option
            value="Svelte"
          >
            Svelte
          </option>
        </select>
        <select
          class="px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            All Difficulties
          </option>
          <option
            value="easy"
          >
            Easy
          </option>
          <option
            value="medium"
          >
            Medium
          </option>
          <option
            value="hard"
          >
            Hard
          </option>
        </select>
      </div>
    </div>
    <div
      class="bg-gray-800 rounded-lg overflow-hidden"
    >
      <div
        class="p-8 text-center text-gray-400"
      >
        Loading tasks...
      </div>
    </div>
  </div>
</div>
`;

exports[`A-UT-SNAPSHOT: Admin Frontend Tasks Snapshot Tests should match admin frontend tasks page snapshot 1`] = `
<div
  class="bg-gray-900 text-white p-6"
>
  <div
    class="max-w-7xl mx-auto"
  >
    <div
      class="flex justify-between items-center mb-8"
    >
      <div>
        <h1
          class="text-3xl font-bold"
        >
          Frontend Tasks
        </h1>
        <p
          class="text-gray-400 mt-2"
        >
          Manage React and frontend coding challenges
        </p>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors"
        >
          <span>
            💻
          </span>
          Create Task
        </button>
      </div>
    </div>
    <div
      class="bg-gray-800 rounded-lg p-4 mb-6"
    >
      <div
        class="flex gap-4 items-center"
      >
        <div
          class="flex-1"
        >
          <div
            class="relative"
          >
            <span>
              🔍
            </span>
            <input
              class="w-full pl-10 pr-4 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-blue-500"
              placeholder="Search tasks..."
              type="text"
              value=""
            />
          </div>
        </div>
        <select
          class="px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            All Categories
          </option>
          <option
            value="React"
          >
            React
          </option>
          <option
            value="JavaScript"
          >
            JavaScript
          </option>
          <option
            value="TypeScript"
          >
            TypeScript
          </option>
          <option
            value="CSS"
          >
            CSS
          </option>
          <option
            value="HTML"
          >
            HTML
          </option>
          <option
            value="Vue.js"
          >
            Vue.js
          </option>
          <option
            value="Angular"
          >
            Angular
          </option>
          <option
            value="Svelte"
          >
            Svelte
          </option>
        </select>
        <select
          class="px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            All Difficulties
          </option>
          <option
            value="easy"
          >
            Easy
          </option>
          <option
            value="medium"
          >
            Medium
          </option>
          <option
            value="hard"
          >
            Hard
          </option>
        </select>
      </div>
    </div>
    <div
      class="bg-gray-800 rounded-lg overflow-hidden"
    >
      <div
        class="p-8 text-center text-gray-400"
      >
        No tasks found. Create your first task!
      </div>
    </div>
  </div>
</div>
`;
